--- a/index.html
+++ b/index.html
@@ -1,9 +1,35 @@
 <html>
-TESTING... Raghav's Website
+  
+<style>
+h1 {
+  font-family: system-ui;
+  color: aqua;
+  text-align: center;
+  text-decoration: overline;
+  letter-spacing: -3px;
+  word-spacing: 10px;
+  text-shadow: 10px 10px 5px blue;
+}
 
+body {
+  background-color: #00b4d8;
+}
 
+img{
+  width: 50%;
+  border: dotted blue 8px
+}
 
-
-
-
+h1:hover {
+  color: #90e0ef;
+}
+  
+</style>
+  <head>
+  </head>
+  <body>
+  <h1> Raghav's Website </h1>
+    <center>
+  <img src= "https://www.thoughtco.com/thmb/EXpjUAx2ZEgV64eKcsAsX7Ucl6w=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/GettyImages_482194715-56a1329e5f9b58b7d0bcf666.jpg">    
+  </body>
 </html>
