--- a/index.html
+++ b/index.html
@@ -23,13 +23,31 @@ img{
 h1:hover {
   color: #90e0ef;
 }
-  
+nav {
+  list-style-type: none;
+  position: fixed;
+  background-color: blue;
+  width: 100vw;
+  top: 0;
+  left: 0;
+}
+li {
+  display: inline;
+  padding: 10px;
+  color: white; 
+}
 </style>
   <head>
-  </head>
+    <title> TAB TITLE </title>
   <body>
+    <nav>
+      <center>
+      <li> HOME </li>
+      <li> PROJECTS </li>
+        </nav>
   <h1> Raghav's Website </h1>
   <center>
-  <img src= "https://www.thoughtco.com/thmb/EXpjUAx2ZEgV64eKcsAsX7Ucl6w=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/GettyImages_482194715-56a1329e5f9b58b7d0bcf666.jpg">  
-  </body>
+  <img src= "https://www.thoughtco.com/thmb/EXpjUAx2ZEgV64eKcsAsX7Ucl6w=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/GettyImages_482194715-56a1329e5f9b58b7d0bcf666.jpg">     
+    </body>
+ </head>
 </html>
