--- a/index.html
+++ b/index.html
@@ -36,15 +36,24 @@ li {
   padding: 10px;
   color: white; 
 }
+a {
+  text-decoration: none;
+  color: white;
+}
+a:hover{
+  color: aqua
+}
 </style>
+  <html>
   <head>
     <title> TAB TITLE </title>
   <body>
     <nav>
       <center>
-      <li> HOME </li>
-      <li> PROJECTS </li>
+        <li><a href="index.html"> HOME </a></li>
+        <li><a href="secondpage.html"> PROJECTS </a></li>
         </nav>
+    
   <h1> Raghav's Website </h1>
   <center>
   <img src= "https://www.thoughtco.com/thmb/EXpjUAx2ZEgV64eKcsAsX7Ucl6w=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/GettyImages_482194715-56a1329e5f9b58b7d0bcf666.jpg">     
