--- a/index.html
+++ b/index.html
@@ -53,10 +53,13 @@ a:hover{
         <li><a href="index.html"> HOME </a></li>
         <li><a href="secondpage.html"> PROJECTS </a></li>
         </nav>
-    
+  <javascript>
+    document.getElementsByTagName("h1")[0].style.fontSize = "6vw";
+  </javascript>
   <h1> Raghav's Website </h1>
   <center>
   <img src= "https://www.thoughtco.com/thmb/EXpjUAx2ZEgV64eKcsAsX7Ucl6w=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/GettyImages_482194715-56a1329e5f9b58b7d0bcf666.jpg">     
     </body>
  </head>
 </html>
+document.getElementsByTagName("h1")[0].style.fontSize = "6vw";
