--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ h1 {
   text-decoration: overline;
   letter-spacing: -3px;
   word-spacing: 10px;
+  font-size: 40px;
   text-shadow: 10px 10px 5px blue;
 }
 
@@ -44,16 +45,15 @@ a:hover{
   color: aqua
 }
 </style>
-  <html>
   <head>
     <title> TAB TITLE </title>
   <body>
     <nav>
       <center>
-        <li><a href="index.html"> HOME </a></li>
-        <li><a href="secondpage.html"> PROJECTS </a></li>
-    </nav>
-  <br>
+      <li> HOME </li>
+      <li> PROJECTS </li>
+        </nav>
+      <br>
   <h1> Raghav's Website </h1>
   <center>
   <img src= "https://www.thoughtco.com/thmb/EXpjUAx2ZEgV64eKcsAsX7Ucl6w=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/GettyImages_482194715-56a1329e5f9b58b7d0bcf666.jpg">     
