--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@ a:hover{
 }
 </style>
   <head>
-    <title> TAB TITLE </title>
+    <title> Raghav's Website </title>
+  </head>
   <body>
     <nav>
       <center>
-      <li> HOME </li>
-      <li> PROJECTS </li>
-        </nav>
+      <li><a href="index.html"> HOME </a> </li>
+      <li><a href="secondpage.html"> PROJECTS </a> </li>
+      </nav>
       <br>
   <h1> Raghav's Website </h1>
   <center>
   <img src= "https://www.thoughtco.com/thmb/EXpjUAx2ZEgV64eKcsAsX7Ucl6w=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/GettyImages_482194715-56a1329e5f9b58b7d0bcf666.jpg">     
     </body>
- </head>
 </html>
