--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@ li {
   padding: 10px;
   color: white; 
 }
-a {
+li a {
   text-decoration: none;
   color: white;
 }
-a:hover{
+li a:hover{
   color: aqua
 }
 </style>
