--- a/secondpage.html
+++ b/secondpage.html
@@ -1,53 +1,26 @@
 <html>
-  
-<style>
-h1 {
-  font-family: system-ui;
-  color: aqua;
-  text-align: center;
-  text-decoration: overline;
-  letter-spacing: -3px;
-  word-spacing: 10px;
-  text-shadow: 10px 10px 5px blue;
-}
-
-body {
-  background-color: #00b4d8;
-}
-
-img{
-  width: 50%;
-  border: dotted blue 8px
-}
-
-h1:hover {
-  color: #90e0ef;
-}
-nav {
-  list-style-type: none;
-  position: fixed;
-  background-color: blue;
-  width: 100vw;
-  top: 0;
-  left: 0;
-}
-li {
-  display: inline;
-  padding: 10px;
-  color: white; 
-}
-</style>
   <head>
-    <title> TAB TITLE </title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="https://drive.google.com/uc?export=view&id=189RaqwiKiPDrMbyt4AfrDO3RslieCsdY">
+    <title> Raghav's Website </title>
+  </head>
   <body>
     <nav>
-      <center>
-      <li> HOME </li>
-      <li> PROJECTS </li>
-        </nav>
-  <h1> Raghav's Website </h1>
-  <center>
-  <img src= "https://www.thoughtco.com/thmb/EXpjUAx2ZEgV64eKcsAsX7Ucl6w=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/GettyImages_482194715-56a1329e5f9b58b7d0bcf666.jpg">     
-    </body>
- </head>
+      <li><a href="index.html"> HOME </a> </li>
+      <li><a href="secondpage.html"> PROJECTS </a> </li>
+    </nav>
+    <br>
+    <br>
+    <center>
+    <h1> Raghav's Website </h1>
+    <p> Other Apps </p>
+    <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/SS8sS8y7k1dIOpkkkPMiOQCt88gKtF0J3ba2oNUQ67M/embed"></iframe>
+    <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/axkUZ1YWg1k7IE2NWKB7mIoZssxXMXP2SV98cKW5Onw/embed"></iframe>
+    <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/SkvupU-rBAuc48-biycTt7XHvR8d-eVgqNzIn3G97zg/embed"></iframe>
+    <br>
+    <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/vuhQiztScKePSwS2MPMfW1Mnhk46wKLS-wbaupV_Viw/embed"></iframe>
+    <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/37Za2hgq73WB8S8q7bIqQaJyoZqVzF8PoWr7ir7AnoA/embed"></iframe>
+    <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/lPmfqkW5q1tG2j0ripblacIOkkwJbIFyBWhtmjZUXw9/embed?nosource"></iframe></iframe>
+    </center>
+  </body>
 </html>
