--- a/secondpage.html
+++ b/secondpage.html
@@ -13,7 +13,7 @@
     <br>
     <center>
     <h1> Raghav's Website </h1>
-    <p> Other Apps </p>
+    <p> PROJECTS </p>
     <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/SS8sS8y7k1dIOpkkkPMiOQCt88gKtF0J3ba2oNUQ67M/embed"></iframe>
     <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/axkUZ1YWg1k7IE2NWKB7mIoZssxXMXP2SV98cKW5Onw/embed"></iframe>
     <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/SkvupU-rBAuc48-biycTt7XHvR8d-eVgqNzIn3G97zg/embed"></iframe>
