--- a/secondpage.html
+++ b/secondpage.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <nav>
+      <center>
       <li><a href="index.html"> HOME </a> </li>
       <li><a href="secondpage.html"> PROJECTS </a> </li>
     </nav>
